@@ -7,7 +7,6 @@
 - try to detect the decimal format and use it during formatting
 - check p4a_table ordering
 - custom formatter for date/time/etc
-- make ui.datepicker.js work with our new date format definitions (maybe call p4a by ajax to reformat)
 - change p4a_table_col image handling, we've to pass by index.php and not phpthumb.php  
 - integrate p4a_base_mask in core and port samples to it
 - auto addaction on intercept and implementmethod when the action is a browser action
@@ -70,6 +69,8 @@
 - P4A_Toolbar::addLabel() method was renamed to addBox()
 - P4A_Toolbar::setOrientation() method was removed because it was not implemented 
 - jQuery::dimensions plugin was updated to 1.2
+- DHTMLCalendar by dynarch was dropped and replaced by jQuery::UI::datepicker 3.2
+- P4A_Field::getAsDate() now it's fully working with the jQuery::UI::datepicker with an additional ajax call to reformat the date
 
 2.2.3
 - a bug with P4A_Label was fixed ("for" property was erroneous with radio and file P4A_Field)
